--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,15 @@ body {
 h1 {
   font-size: 36px;
   margin-bottom: 10px;
+  /* color: #000000; */
+  color: #ffffff;
 }
 
 p {
-  font-size: 20px;
+  font-size: 24px;
   margin-bottom: 30px;
+  /* color: #000000; */
+  color: #ffffff;
 }
 
 /* Social Media Icons */
@@ -59,19 +63,21 @@ p {
 }
 
 .social-icons a {
-  color: #fff;
-  font-size: 12px;
+  /* color: #6C63FF; */
+  color: #ffffff;
+  font-size: 24px;
   margin: 0 5px;
   text-decoration: none;
   transition: 0.3s;
   
   /* Circle Styling */
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
   display: inline-block;
   text-align: center;
-  border: 2px solid #fff;
+  /* border: 2px solid #6C63FF; */
+  border: 2px solid #ffffff;
   border-radius: 50%;
 }
 
@@ -110,7 +116,8 @@ p {
 } */
 
 .next-page-button .next-btn {
-  color: #fff;
+  color: #6C63FF;
+  color: #ffffff;
   font-size: 12px;
   /* margin: 0 5px; */
   margin-top: 175px;
@@ -118,12 +125,13 @@ p {
   transition: 0.3s;
   
   /* Circle Styling */
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
   display: inline-block;
   text-align: center;
-  border: 2px solid #fff;
+  /* border: 2px solid #6C63FF; */
+  border: 2px solid #ffffff;
   border-radius: 50%;
 }
 
