--- a/css/resume.css
+++ b/css/resume.css
@@ -6,7 +6,7 @@ body {
   background-color: #f0f0f0;
   background-size: cover;
   color: #333;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
