--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ p {
 /* ------------------------ */
 
 /* For tablets */
-@media (max-width: 992px) {
+/* @media (max-width: 992px) {
   h1 {
     font-size: 30px;
   }
@@ -158,10 +158,10 @@ p {
     font-size: 16px;
     padding: 10px 20px;
   }
-}
+} */
 
 /* For mobile devices */
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
   .container {
     margin-top: 20%;
     padding: 15px;
@@ -201,10 +201,10 @@ p {
     font-size: 10px;
     margin-top: 100px;
   }
-}
+} */
 
 /* Extra small devices */
-@media (max-width: 400px) {
+/* @media (max-width: 400px) {
   h1 {
     font-size: 20px;
   }
@@ -212,4 +212,4 @@ p {
   p {
     font-size: 16px;
   }
-}
+} */
