--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
 
 /* Container Styling */
 .container {
-  margin-top: 100px;
+  margin-top: 50%;
   padding: 20px;
   animation: downToUp 1s ease-out;
 }
