--- a/css/style.css
+++ b/css/style.css
@@ -28,18 +28,18 @@ body {
 
 /* Container Styling */
 .container {
-  margin-top: 50px;
+  /* margin-top: 50px; */
   padding: 20px;
   animation: downToUp 1s ease-out;
 }
 
 /* Profile Picture */
 .profile-pic img {
-  width: 175px;
-  height: 175px;
+  width: 125px;
+  height: 125px;
   border-radius: 50%;
   object-fit: cover;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   border: 5px solid #6C63FF;
 }
 
@@ -52,9 +52,33 @@ h1 {
 
 p {
   font-size: 24px;
+  margin-top: -2px;
   margin-bottom: 40px;
   color: #ffffff;
+  width: 26ch;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 2px solid #ffffff;
+  font-family: 'Poppins', sans-serif;
+
+  /* Center horizontally */
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+
+  /* Typing animation */
+  animation: typing 2s steps(26), blink 0.7s step-end infinite;
 }
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 26ch }
+}
+
+@keyframes blink {
+  50% { border-color: transparent; }
+}
+
 
 /* Social Media Icons */
 .social-icons {
@@ -108,24 +132,24 @@ p {
 .next-page-button .next-btn {
   color: #ffffff;
   font-size: 20px;
-  margin-top: 100px;
+  margin-top: 50px;
   text-decoration: none;
   transition: 0.3s;
-  width: 60px;
-  height: 60px;
-  line-height: 60px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
   display: inline-block;
   text-align: center;
   border: 2px solid #ffffff;
   border-radius: 50%;
 }
 
-
 .next-page-button .next-btn:hover {
   background: #6C63FF;
-  transform: translateY(-3px);
+  /* transform: translateY(-3px); */
   color: #ffffff;
-  border: none;
+  border-color: #6C63FF;
+  text-decoration: none;
 }
 
 /* ------------------------ */
