--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -212,6 +212,68 @@ h6 {
 }
 
 /*--------------------------------------------------------------
+# Call To Action Section
+--------------------------------------------------------------*/
+.call-to-action {
+  padding: 80px 0;
+  position: relative;
+  clip-path: inset(0);
+}
+
+.call-to-action img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 1;
+}
+
+.call-to-action:before {
+  content: "";
+  background: color-mix(in srgb, var(--background-color), transparent 50%);
+  position: absolute;
+  inset: 0;
+  z-index: 2;
+}
+
+.call-to-action .container {
+  position: relative;
+  z-index: 3;
+}
+
+.call-to-action h3 {
+  font-size: 28px;
+  font-weight: 700;
+  color: var(--default-color);
+}
+
+.call-to-action p {
+  color: var(--default-color);
+}
+
+.call-to-action .cta-btn {
+  font-family: var(--heading-font);
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 12px 40px;
+  border-radius: 50px;
+  transition: 0.5s;
+  margin: 10px;
+  background-color: rgba(0, 0, 0, 0.1);
+  color: var(--accent-color);
+}
+
+.call-to-action .cta-btn:hover {
+  background: color-mix(in srgb, var(--accent-color) 90%, white 15%);
+  color: var(--contrast-color);
+}
+
+/*--------------------------------------------------------------
 # Global Footer
 --------------------------------------------------------------*/
 .footer {
@@ -643,7 +705,7 @@ section,
   color: var(--heading-color);
   font-size: 26px;
   font-weight: 700;
-  margin-top: 20px;
+  margin-top: 30px;
   margin-bottom: 20px;
 }
 
@@ -745,75 +807,75 @@ section,
 }
 
 .services .service-item.item-cyan i {
-  color: #0dcaf0;
+  color: var(--accent-color);
 }
 
 .services .service-item.item-cyan:hover .icon i {
-  color: #fff;
+  color: var(--background-color);
 }
 
 .services .service-item.item-cyan:hover .icon path {
-  fill: #0dcaf0;
+  fill: var(--accent-color);
 }
 
 .services .service-item.item-orange i {
-  color: #fd7e14;
+  color: var(--accent-color);
 }
 
 .services .service-item.item-orange:hover .icon i {
-  color: #fff;
+  color: var(--background-color);
 }
 
 .services .service-item.item-orange:hover .icon path {
-  fill: #fd7e14;
+  fill: var(--accent-color);
 }
 
 .services .service-item.item-teal i {
-  color: #20c997;
+  color: var(--accent-color);
 }
 
 .services .service-item.item-teal:hover .icon i {
-  color: #fff;
+  color: var(--background-color);
 }
 
 .services .service-item.item-teal:hover .icon path {
-  fill: #20c997;
+  fill: var(--accent-color);
 }
 
 .services .service-item.item-red i {
-  color: #df1529;
+  color: var(--accent-color);
 }
 
 .services .service-item.item-red:hover .icon i {
-  color: #fff;
+  color: var(--background-color);
 }
 
 .services .service-item.item-red:hover .icon path {
-  fill: #df1529;
+  fill: var(--accent-color);
 }
 
 .services .service-item.item-indigo i {
-  color: #6610f2;
+  color: var(--accent-color);
 }
 
 .services .service-item.item-indigo:hover .icon i {
-  color: #fff;
+  color: var(--background-color);
 }
 
 .services .service-item.item-indigo:hover .icon path {
-  fill: #6610f2;
+  fill: var(--accent-color);
 }
 
 .services .service-item.item-pink i {
-  color: #f3268c;
+  color: var(--accent-color);
 }
 
 .services .service-item.item-pink:hover .icon i {
-  color: #fff;
+  color: var(--background-color);
 }
 
 .services .service-item.item-pink:hover .icon path {
-  fill: #f3268c;
+  fill: var(--accent-color);;
 }
 
 /*--------------------------------------------------------------
