--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -330,6 +330,11 @@ h6 {
   border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
 }
 
+.footer .credits {
+  font-size: 13px;
+  padding-top: 5px;
+}
+
 /*--------------------------------------------------------------
 # Preloader
 --------------------------------------------------------------*/
