--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -562,7 +562,8 @@ section,
 }
 
 .about img {
-  border-radius: 5px;
+  border: 5px solid var(--accent-color);
+  border-radius: 50%;
 } 
 
 /*--------------------------------------------------------------
