--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -700,7 +700,6 @@ section,
 }
 .services .service-item {
   background-color: var(--background-color);
-  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.1);
   height: 100%;
   padding: 60px 30px;
   text-align: center;
@@ -710,119 +709,40 @@ section,
 }
 
 .services .service-item .icon {
-  margin: 0 auto;
-  width: 100px;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: ease-in-out 0.3s;
-  position: relative;
-}
-
-.services .service-item .icon i {
   font-size: 36px;
-  transition: 0.5s;
+  padding: 20px;
+  border-radius: 4px;
   position: relative;
-}
-
-.services .service-item .icon svg {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.services .service-item .icon svg path {
-  transition: 0.5s;
-  fill: color-mix(in srgb, var(--default-color), transparent 95%);
+  margin-bottom: 25px;
+  display: inline-block;
+  line-height: 0;
+  transition: 0.3s;
+  color: #5f687b;
+  background: rgba(95, 104, 123, 0.1); /* Subtle background matching main color */
 }
 
 .services .service-item h3 {
+  font-size: 24px;
   font-weight: 700;
-  margin: 10px 0 15px 0;
-  font-size: 22px;
 }
 
 .services .service-item p {
-  line-height: 24px;
-  font-size: 14px;
-  margin-bottom: 0;
+  font-size: 15px;
+  margin: 0;
 }
 
-/* .services .service-item:hover {
-  box-shadow: 0px 5px 35px 0px rgba(0, 0, 0, 0.1);
-} */
-
-.services .service-item.item-cyan i {
-  color: var(--accent-color);
+/* Hover Effects */
+.services .service-item:hover {
+  background: #5f687b; /* Hover background color */
 }
 
-.services .service-item.item-cyan:hover .icon i {
-  color: var(--background-color);
+.services .service-item:hover h3,
+.services .service-item:hover p {
+  color: #fff;
 }
 
-.services .service-item.item-cyan:hover .icon path {
-  fill: var(--accent-color);
-}
-
-.services .service-item.item-orange i {
-  color: var(--accent-color);
-}
-
-.services .service-item.item-orange:hover .icon i {
-  color: var(--background-color);
-}
-
-.services .service-item.item-orange:hover .icon path {
-  fill: var(--accent-color);
-}
-
-.services .service-item.item-teal i {
-  color: var(--accent-color);
-}
-
-.services .service-item.item-teal:hover .icon i {
-  color: var(--background-color);
-}
-
-.services .service-item.item-teal:hover .icon path {
-  fill: var(--accent-color);
-}
-
-.services .service-item.item-red i {
-  color: var(--accent-color);
-}
-
-.services .service-item.item-red:hover .icon i {
-  color: var(--background-color);
-}
-
-.services .service-item.item-red:hover .icon path {
-  fill: var(--accent-color);
-}
-
-.services .service-item.item-indigo i {
-  color: var(--accent-color);
-}
-
-.services .service-item.item-indigo:hover .icon i {
-  color: var(--background-color);
-}
-
-.services .service-item.item-indigo:hover .icon path {
-  fill: var(--accent-color);
-}
-
-.services .service-item.item-pink i {
-  color: var(--accent-color);
-}
-
-.services .service-item.item-pink:hover .icon i {
-  color: var(--background-color);
-}
-
-.services .service-item.item-pink:hover .icon path {
-  fill: var(--accent-color);;
+.services .service-item:hover .icon {
+  background: #fff;
 }
 
 /*--------------------------------------------------------------
